# SmartVerify-AI-System

./: .gitignore  README.md  app.py  main.py  pyproject.toml  quick_commerce_ai_verification_project_plan.md  requirements.txt
catalog/: catalog.json
catalog_builder/: build_catalog.py  extract_frames.py
core/: config.py  logger.py
detectors/: rtdetr_detector.py
engine/: pipeline.py  reconciler.py  verifier.py
matchers/: clip_matcher.py
ocr/: ocr_manager.py
