[project]
name = "problem-statement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clip",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "ftfy>=6.3.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "paddleocr>=3.4.0",
    "paddlepaddle>=3.3.0",
    "pillow>=12.1.1",
    "regex>=2026.2.28",
    "streamlit>=1.55.0",
    "supervision>=0.27.0.post1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.21",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
